# aoc2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
src/: 1-1.cc  1-2.cc  10-1.cc  10-2.cc  2-1.cc  2-2.cc  3-1.cc  3-2.cc  4-1.cc  4-2.cc  5-1.cc  5-2.cc  6.cc  7.cc  8-1.cc  8-2.cc  9.cc
