cmake_minimum_required(VERSION 3.24)
project(aoc2022)

set(CMAKE_CXX_STANDARD 20)

add_executable(day1-part1 src/1-1.cc)
add_executable(day1-part2 src/1-2.cc)
add_executable(day2-part1 src/2-1.cc)
add_executable(day2-part2 src/2-2.cc)
add_executable(day3-part1 src/3-1.cc)
add_executable(day3-part2 src/3-2.cc)
add_executable(day4-part1 src/4-1.cc)
add_executable(day4-part2 src/4-2.cc)
add_executable(day5-part1 src/5-1.cc)
add_executable(day5-part2 src/5-2.cc)
